# rezcontroller

./: README.md  package.py  setup.cfg
src/rezcontroller/: cli.py  context.py  package.py  project.py
src/rezcontroller/configs/: packages.yaml  projects.yaml
