[metadata]
name = rezcontroller
version = 1.0.2
description = Environment manager

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
rezcontroller =
    configs/*.yaml

[options.entry_points]
console_scripts =
  project-view = rezcontroller.cli:view_project
  project-enter = rezcontroller.cli:enter_project

  package-view = rezcontroller.cli:view_package

  context-view = rezcontroller.cli:view_context
  context-create = rezcontroller.cli:create_context
